# fourier_animation

./: Cargo.toml  Makefile
example/: README.md  package-lock.json  package.json
example/src/components/header/: index.tsx
example/src/routes/home/: index.js  index.tsx
example/src/types/: frame.ts
src/: animation.rs  fourier.rs  lib.rs
src/animation/: mod.rs  naive_animation.rs
