[package]
name = "fourier_animation"
version = "0.1.0"
authors = ["Mingde Ren <mingde-ren@outlook.com>", "Weijie Huang <tonyh0411@gmail.com>", "Wenxuan SHI <whexy@outlook.com>"]
description = "Fourier Animation"
license = "MIT"
repository = "https://github.com/whexy/fourier_animation"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
num = "0.4"
wasm-bindgen = "0.2"